checkout.css
/* ... */
main {
  display: flex;
  overflow: hidden;

  @media screen and (min-width: 2000px) {
    justify-content: center;
    gap: 160px;
  }

  @media screen and (max-width: 1265px) {
    flex-wrap: wrap;
  }
  .left-section {
    padding: 63px 100px;
    display: flex;
    flex-direction: column;
    gap: 36px;

    @media screen and (max-width: 1265px) {
      justify-content: center;
      align-items: center;
      width: 100%;
      padding: 30px 0;
    }
    h1 {
      font-weight: 600;
      font-size: 36px;
      font-family: "Poppins", sans-serif;
    }

    p {
      font-weight: 500;
      font-size: 16px;
      font-family: "Poppins", sans-serif;
    }

    input {
      width: 453px;
      height: 75px;
      border-radius: 10px;
      border: 1px solid #9f9f9f;

      @media screen and (max-width: 507px) {
        width: 100%;
      }
    }

    select {
      width: 453px;
      height: 75px;
      border-radius: 10px;
      border: 1px solid #9f9f9f;
      padding: 0 33px;
      font-weight: 400;
      font-size: 16px;
      font-family: "Poppins", sans-serif;
      color: #9f9f9f;

      @media screen and (max-width: 507px) {
        width: 100%;
      }
    }

    .user-name {
      display: flex;
      gap: 25px;

      @media screen and (max-width: 507px) {
        width: 100%;
        flex-wrap: wrap;
        justify-content: center;
      }

      input {
        width: 211px;
        height: 75px;
        border-radius: 10px;
        border: 1px solid #9f9f9f;
      }
    }

    .additional {
      input {
        margin-top: 50px;
        color: #9f9f9f;
        font-size: 16px;
        font-family: "Poppins", sans-serif;
        display: flex;
        align-items: center;
        justify-content: center;
      }
    }
  }

  .right-section {
    padding-top: 63px;
    display: flex;
    flex-direction: column;

    @media screen and (max-width: 1265px) {
      justify-content: center;
      align-items: center;
      width: 100%;
    }
    .top {
      max-width: 533px;
      padding: 86px 37px;
      display: flex;
      flex-direction: column;
      gap: 15px;

      @media screen and (max-width: 1265px) {
        width: 100%;
      }
      .first {
        display: flex;
        justify-content: space-between;

        span {
          font-size: 24px;
          font-weight: 500;
          font-family: "Poppins", sans-serif;
        }
      }
      .second {
        display: flex;
        align-items: center;
        justify-content: space-between;

        .count {
          .name {
            font-size: 16px;
            font-weight: 400;
            font-family: "Poppins", sans-serif;
            color: #9f9f9f;
          }

          .p {
            font-size: 12px;
            font-weight: 500;
            font-family: "Poppins", sans-serif;
          }
        }

        span {
          font-size: 16px;
          font-weight: 300;
          font-family: "Poppins", sans-serif;
        }
      }
      .count {
        display: flex;
        gap: 8px;
        align-items: center;
      }

      .third {
        display: flex;
        justify-content: space-between;
        align-items: center;

        .first {
          font-size: 16px;
          font-weight: 400;
          font-family: "Poppins", sans-serif;
        }

        .second {
          font-size: 16px;
          font-weight: 300;
          font-family: "Poppins", sans-serif;
        }
      }

      .fourth {
        display: flex;
        justify-content: space-between;

        .first {
          font-size: 16px;
          font-weight: 400;
          font-family: "Poppins", sans-serif;
        }

        .second {
          font-size: 24px;
          font-weight: 700;
          font-family: "Poppins", sans-serif;
          color: var(--gold);
        }
      }
    }

    .line {
      display: flex;
      align-items: center;
      justify-content: center;
      padding: 0 37px;
    }

    .bottom {
      padding: 22px 37px;
      max-width: 533px;

      .bank-top {
        display: flex;
        align-items: center;
        gap: 15px;

        svg {
          cursor: pointer;
        }

        p {
          font-size: 16px;
          font-weight: 400;
          font-family: "Poppins", sans-serif;
        }
      }

      .paragraph {
        .top-p {
          font-size: 16px;
          font-weight: 300;
          font-family: "Poppins", sans-serif;
          color: #9f9f9f;
        }

        .payment {
          .money {
            display: flex;
            align-items: center;
            gap: 15px;

            p {
              font-size: 16px;
              font-weight: 500;
              font-family: "Poppins", sans-serif;
              color: #9f9f9f;
            }

            svg {
              cursor: pointer;
            }
          }
        }

        .bottom-p {
          font-size: 16px;
          font-weight: 300;
          font-family: "Poppins", sans-serif;

          a {
            text-decoration: none;
            color: black;
            font-weight: 500;
          }
        }

        button {
          display: flex;
          margin-top: 39px;
          width: 100%;
          justify-content: center;
          align-items: center;
          width: 318px;
          height: 64px;
          border-radius: 15px;
          background-color: transparent;
          font-size: 20px;
          font-weight: 400;
          font-family: "Poppins", sans-serif;
          cursor: pointer;
        }
      }
    }
  }
}
/* ... */

